--- a/aula12ex/ex014/style.css
+++ b/aula12ex/ex014/style.css
@@ -2,6 +2,7 @@
 
 body{
     background-color: lightblue;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header{
@@ -12,7 +13,7 @@ header{
 section{
     background-color: white;
     border-radius: 10px;
-    width: 500px;
+    width: 400px;
     padding: 15px;
     margin: auto;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.424);
@@ -22,4 +23,13 @@ footer{
     color: white;
     text-align: center;
     font-style: italic;
+}
+
+div{
+    text-align: center;
+    padding: 10px;
+}
+
+#imagem{
+    width: 350px;
 }
