--- a/ex015/style.css
+++ b/ex015/style.css
@@ -2,6 +2,7 @@
 
 body{
     background-color: lightblue;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header{
@@ -16,6 +17,10 @@ section{
     padding: 15px;
     margin: auto;
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.424);
+}
+
+img{
+    padding: 15px;
 }
 
 footer{
